# zettelkasten-auto

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
chromastores/zettledb_stf/: chroma.sqlite3
config/: config.yaml
src/: __init__.py  bundle.py  db.py  llm.py  main.py  prompts.py
src/db/: __init__.py  client.py  embeddings.py
src/llm/: __init__.py  extraction.py  providers.py
tests/: test_integration.py
